--- a/MongodbConfiguration.csproj
+++ b/MongodbConfiguration.csproj
@@ -11,6 +11,8 @@
       <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
     </ItemGroup>
 
 </Project>
